Add Personal Website in Footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,8 @@
         <a href="https://www.linkedin.com/in/p-arth-shah" target="_blank">
             <img src="{{ '/assets/images/linkedin.png' | relative_url }}" />
         </a>
+        <a href="https://parthatom.github.io" target="_blank">
+            <img src="{{ '/assets/images/pa.jpeg' | relative_url }}" />
+        </a>
     </p>
 </footer>
