--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
         {% endfor %}
     {% endif %}
 
-    <link rel="shortcut icon" href="{{ '/assets/favicon_peach.ico' | relative_url }}">
+    <link rel="shortcut icon" href="{{ '/assets/pa.jpeg' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
@@ -51,7 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
     <!-- Google Analytics -->
-    <script>
+    <!-- <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -59,7 +59,7 @@
 
         ga('create', 'UA-8161570-6', 'auto');
         ga('send', 'pageview');
-    </script>
+    </script> -->
 
     <!-- For Facebook share button -->
     <div id="fb-root"></div>
